debug for UserOperationLog

--- a/BaseProject.Admin/Views/Account/Login.cshtml
+++ b/BaseProject.Admin/Views/Account/Login.cshtml
@@ -21,9 +21,9 @@
             <img src="~/Content/images/loginlog.png" />
         </div>
         <div>
-            @*帳號：<code>admin@example.com</code>
+            帳號：<code>adminm</code>
             <br />
-            密碼：<code>Admin@123456</code>*@
+            密碼：<code>Admin@123456</code>
         </div>
         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
