--- a/BaseProject.Admin/Views/UserOperationLog/Index.cshtml
+++ b/BaseProject.Admin/Views/UserOperationLog/Index.cshtml
@@ -73,6 +73,6 @@
     </div>
 </div>
 
-@section scripts{
+@*@section scripts{
     <script src="~/Scripts/TypeScript/RecordSelectCheckbox.js"></script>
-}
+}*@
