基本功能整合與初步測試

--- a/BaseProject.Admin/Views/Account/Login.cshtml
+++ b/BaseProject.Admin/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
 ﻿@using System.Web.Optimization
-@using NLog.Layouts
 @model BaseProject.Admin.ViewModels.Account.LoginViewModel
 @{
     Layout = "";
@@ -21,7 +20,7 @@
             <img src="~/Content/images/loginlog.png" />
         </div>
         <div>
-            帳號：<code>adminm</code>
+            帳號：<code>admin</code>
             <br />
             密碼：<code>Admin@123456</code>
         </div>
