--- a/BaseProject.Admin/Views/UserLoginLog/Index.cshtml
+++ b/BaseProject.Admin/Views/UserLoginLog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using PagedList.Mvc
+﻿@using Core.Utility.Paging
+@using PagedList.Mvc
 @model BaseProject.Admin.ViewModels.UserLoginLog.Index
 
 @{
